[workspace]
members = ["plotters", "plotters-backend", "plotters-bitmap", "plotters-svg"]
default-members = ["plotters"]

[patch.crates-io]
pathfinder_geometry = { commit="1b7c8bcdaf9da3f045af6a650b5f5c00f0c5a7eb", git = "https://github.com/servo/pathfinder" }
pathfinder_canvas = { commit="1b7c8bcdaf9da3f045af6a650b5f5c00f0c5a7eb", git = "https://github.com/servo/pathfinder" }
pathfinder_renderer = { commit="1b7c8bcdaf9da3f045af6a650b5f5c00f0c5a7eb", git = "https://github.com/servo/pathfinder" }
pathfinder_content = { commit="1b7c8bcdaf9da3f045af6a650b5f5c00f0c5a7eb", git = "https://github.com/servo/pathfinder" }
pathfinder_simd = { commit="1b7c8bcdaf9da3f045af6a650b5f5c00f0c5a7eb", git = "https://github.com/servo/pathfinder" }
pathfinder_gl = { commit="1b7c8bcdaf9da3f045af6a650b5f5c00f0c5a7eb", git = "https://github.com/servo/pathfinder" }
pathfinder_webgl = { commit="1b7c8bcdaf9da3f045af6a650b5f5c00f0c5a7eb", git = "https://github.com/servo/pathfinder" }
pathfinder_gpu = { commit="1b7c8bcdaf9da3f045af6a650b5f5c00f0c5a7eb", git = "https://github.com/servo/pathfinder" }
pathfinder_resources = { commit="1b7c8bcdaf9da3f045af6a650b5f5c00f0c5a7eb", git = "https://github.com/servo/pathfinder" }
pathfinder_color = { commit="1b7c8bcdaf9da3f045af6a650b5f5c00f0c5a7eb", git = "https://github.com/servo/pathfinder" }
pathfinder_lottie = { commit="1b7c8bcdaf9da3f045af6a650b5f5c00f0c5a7eb", git = "https://github.com/servo/pathfinder" }
pathfinder_magicleap_demo = { commit="1b7c8bcdaf9da3f045af6a650b5f5c00f0c5a7eb", git = "https://github.com/servo/pathfinder" }
pathfinder_ui = { commit="1b7c8bcdaf9da3f045af6a650b5f5c00f0c5a7eb", git = "https://github.com/servo/pathfinder" }
pathfinder_svg = { commit="1b7c8bcdaf9da3f045af6a650b5f5c00f0c5a7eb", git = "https://github.com/servo/pathfinder" }
pathfinder_metal = { commit="1b7c8bcdaf9da3f045af6a650b5f5c00f0c5a7eb", git = "https://github.com/servo/pathfinder" }
pathfinder_swf = { commit="1b7c8bcdaf9da3f045af6a650b5f5c00f0c5a7eb", git = "https://github.com/servo/pathfinder" }
pathfinder_text = { commit="1b7c8bcdaf9da3f045af6a650b5f5c00f0c5a7eb", git = "https://github.com/servo/pathfinder" }
pathfinder_web_canvas = { commit="1b7c8bcdaf9da3f045af6a650b5f5c00f0c5a7eb", git = "https://github.com/servo/pathfinder" }